@@ -279,7 +279,7 @@ function printWarnings(warnings) {
 }
 
 /* print stats */
-function printStats(stats) {
+function printStats(stats, isCoord) {
   'use strict';
   if (!stats) {
     return;
@@ -291,17 +291,20 @@ function printStats(stats) {
   var maxSFLen = String('Scan Full').length;
   var maxSILen = String('Scan Index').length;
   var maxFLen = String('Filtered').length;
+  var maxRLen = String('Requests').length;
   var maxMem = String('Peak Mem [b]').length;
   var maxETen = String('Exec Time [s]').length;
   stats.executionTime = stats.executionTime.toFixed(5);
   stringBuilder.appendLine(' ' + header('Writes Exec') + '   ' + header('Writes Ign') + '   ' + header('Scan Full') + '   ' +
-    header('Scan Index') + '   ' + header('Filtered') + '   ' + header('Peak Mem [b]') + '   ' + header('Exec Time [s]'));
+    header('Scan Index') + '   ' + header('Filtered') + '   ' + (isCoord ? header('Requests') + '   ' : '') + header('Peak Mem [b]') + '   ' + 
+    header('Exec Time [s]'));
 
   stringBuilder.appendLine(' ' + pad(1 + maxWELen - String(stats.writesExecuted).length) + value(stats.writesExecuted) + '   ' +
     pad(1 + maxWILen - String(stats.writesIgnored).length) + value(stats.writesIgnored) + '   ' +
     pad(1 + maxSFLen - String(stats.scannedFull).length) + value(stats.scannedFull) + '   ' +
     pad(1 + maxSILen - String(stats.scannedIndex).length) + value(stats.scannedIndex) + '   ' +
     pad(1 + maxFLen - String(stats.filtered).length) + value(stats.filtered) + '   ' +
+    (isCoord ? pad(1 + maxRLen - String(stats.httpRequests).length) + value(stats.httpRequests) + '   ' : '') +
     pad(1 + maxMem - String(stats.peakMemoryUsage).length) + value(stats.peakMemoryUsage) + '   ' +
     pad(1 + maxETen - String(stats.executionTime).length) + value(stats.executionTime));
   stringBuilder.appendLine();
@@ -2109,7 +2112,7 @@ function processQuery(query, explain, planIndex) {
   printModificationFlags(modificationFlags);
   printWarnings(explain.warnings);
   if (profileMode) {
-    printStats(explain.stats);
+    printStats(explain.stats, isCoord);
     printProfile(explain.profile);
   }
 }
