@@ -1,6 +1,8 @@
 v3.9.5 (XXXX-XX-XX)
 -------------------
 
+* Show number of HTTP requests in cluster query profiles.
+
 * Repair "load indexes into memory" function in the web UI.
 
 * Fixed SEARCH-408: Added ArangoSearch cached columns.
